--- a/src/components/welcome/Welcome.css
+++ b/src/components/welcome/Welcome.css
@@ -5,26 +5,38 @@
 }
 
 .divStyle1 {
-    margin: 50px;
-    margin-top: 60px; 
+    margin: 20px; 
     display: flex;
     justify-content: center;
     flex-direction: row;
+    box-shadow: black 0 0 50px;
+}
+
+.divStyle2 {
+    margin: 10px;
+    margin-top: 20px; 
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    box-shadow: black 0 0 50px;
+}
+
+img {
+    width: 55vw;
+    box-shadow: black 0 0 50px;
+    border-radius: 5px;
 }
 
 .btn {
-    margin: 10px;
-    padding: 10px;
+    width: 300px;
+    height: 30px;
+    background-color: transparent;
+    color: white;
+    margin-bottom: 40px;
     text-align: center;
     text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: rgb(0, 0, 0);
-    text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    text-shadow: 0px 0px 10px black;
     box-shadow: 0 0 20px rgb(0, 0, 0);
-    border-radius: 10px;
+    border-radius: 3px;
    }
   
-  .btn1 {
-    background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
-  }
