added some more styling to stack and resume

--- a/src/components/home/mainCSS/HomeMain.css
+++ b/src/components/home/mainCSS/HomeMain.css
@@ -23,7 +23,13 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
+}
 
+.divStyleBottomThreetwo {
+    margin-bottom: 5vw;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
 }
 
 .divStyleRight {
